--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,13 @@ body {
   padding: 20px;
 }
 
-h1 {
-  color: #6a1b9a; /* Фіолетовий */
+/* h1 {
+  color: #6a1b9a; 
 }
 
 h2 {
-  color: #d32f2f; /* Червоний */
-}
+  color: #d32f2f; 
+} */
 
 div {
   margin-bottom: 20px;
